fixed text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,11 @@
 .flex-container .item {
   flex: 1;
 }
+
+.text_slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
